--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -888,6 +888,7 @@ textarea {
   background-color: transparent;
   display: flex;
   align-items: center;
+  justify-content: center;
   cursor: pointer;
 }
 
@@ -910,12 +911,12 @@ textarea {
 .intro-container h3 {
   font-size: 42px;
   color: var(--white-color);
-  position: absolute;
-  left: 36%;
+  position: fixed;
   z-index: 105;
   animation: textHide 1s ease-in-out forwards;
   animation-delay: 2s;
   opacity: 0;
+  text-align: center;
 }
 .intro-img {
   width: 100%;
@@ -1015,6 +1016,9 @@ textarea {
 
 /*  */
 @media (max-width: 575px) {
+  .intro-container h3 {
+    font-size: 24px;
+  }
   .container {
     width: 100%;
     padding: 20px;
@@ -1165,6 +1169,9 @@ textarea {
   }
 }
 @media (min-width: 576px) and (max-width: 767px) {
+  .intro-container h3 {
+    font-size: 34px;
+  }
   .container {
     width: 100%;
     padding: 20px;
