--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -577,7 +577,7 @@ header {
 }
 .contact-icon {
   font-size: 20px;
-  color: var(--lavender-color);
+  color: var(--white-color);
 }
 .contact-box h3 {
   opacity: 0.7;
