--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -301,7 +301,7 @@ header {
   min-height: 100vh;
   padding-top: 100px; */
   position: relative;
-  background: none; /* Remove the direct background */
+  background: none;
   height: auto;
   min-height: 100vh;
   padding-top: 100px;
@@ -316,8 +316,9 @@ header {
   background: url(../bg-img.png) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
-  filter: blur(5px); /* Adjust the blur intensity */
+  filter: blur(5px);
   z-index: -1;
+  opacity: 0.6;
 }
 .about-container {
   width: 100%;
